# mazeGPT

./: .env  .gitignore  .pylintrc  CITATION.cff  Dockerfile  LICENSE  README.md  config.py  main.py  mazegpt-hydra.py  mazegpt.py  model.py  prepare.py  pyproject.toml  requirements.txt  setup.py  tensorflow-demo.py  test.py  train.py
.github/workflows/: pylint.yml
conf/: default.yaml  gpu.yaml
docs/: GETTING_STARTED.md  INTRODUCTION.md  OVERVIEW.md  STRUCTURE.md
mazelib/: __init__.py  maze.py
mazelib/algorithms/: __init__.py  aldous_broder.py  backtracking.py  binary_tree.py  prims.py
outputs/2023-07-21/23-43-09/.hydra/: hydra.yaml
outputs/2023-07-21/23-43-51/.hydra/: config.yaml  hydra.yaml
src/: __init__.py  config.py  data.py  logging.py  maze.py  model.py  new_config.py  paths.py  prepare.py  sample.py  tensorflow-demo.py  test.py  tokenizer.py  train.py  trainer.py  util.py
src/config/: available_configs.py  base.py  config.py  default.py  gpu.py
src/generate/: aldous_broder.py  backtracking.py  binary_tree.py  maze_gen_algo.py  prims.py
src/maze/: __init__.py  maze.py  maze_factory.py  maze_gen_algo.py
src/maze/algorithms/: aldous_broder.py  backtracking.py  binary_tree.py  prims.py
src/maze2/: maze.py  maze_algo.py
src/maze2/algorithms/: __init__.py  aldous_broder.py  backtracking.py  binary_tree.py  prims.py
src/mazeGPT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mazelib/: __init__.py  maze.py  maze_gen_algo.py
src/mazelib/algorithms/: __init__.py  aldous_broder.py  backtracking.py  binary_tree.py  prims.py
(+14 files in other folders)
