[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mazeGPT"
authors = [
    {name = "Noah Hein"},
]
description = "GPT2 neural network for generating mazes"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["maze", "gpt", "ai", "pytorch", "huggingface"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.23.5",
    "matplotlib~=3.7.1",
    "keras~=2.12.0",
    "datasets~=2.13.0",
    "transformers~=4.30.2",
    "tokenizers~=0.13.3",
    "torch~=2.0.1",
    "pynvml~=11.5.0",
    "accelerate~=0.20.3",
    "pylint~=2.17.4",
    "click~=8.1.3"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pylint ~=2.17.4"]

#[project.scripts]
#my-script = "my_package.module:function"